test/testdata/classes/methods/instance/invalid_unary_op_error.lox
class Foo {
  bar() {}
}
-Foo().bar; // error: '-' operator cannot be used with type 'function'
